--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "tomislav",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "nodemon": "^3.0.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "typescript": "^5.3.3"
   }
 }
