--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.3"
+    "mysql2": "^3.9.1",
+    "nodemon": "^3.0.3",
+    "reflect-metadata": "^0.2.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/node": "^20.11.17",
     "typescript": "^5.3.3"
   }
 }
