--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "tomislav",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
     "nodemon": "^3.0.3",
@@ -16,6 +17,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
     "typescript": "^5.3.3"
