--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+DB_USERNAME='root'
+DB_PASSWORD='12345678'
+DATABASE='ice_and_fire_database'
+DB_PORT=3306
+DB_HOST='localhost'
 ACCESS_SECRET=access_token
 REFRESH_SECRET=refresh_token
 PORT=8000
